--- a/contact-us.html
+++ b/contact-us.html
@@ -94,12 +94,13 @@
         <section class="contact-form">
             <h2>Send Us a Message</h2>
             <form action="path/to/your/server/endpoint" method="POST">
-                <label for="name">Name</label>
-                <input type="text" id="name" name="name" required>
+                <div class="col-6">
+                    <label for="name">Name</label>
+                    <input type="text" id="name" name="name" required>
 
-                <label for="email">Email</label>
-                <input type="email" id="email" name="email" required>
-
+                    <label for="email">Email</label>
+                    <input type="email" id="email" name="email" required>
+                </div>
                 <label for="message">Message</label>
                 <textarea id="message" name="message" rows="6" required></textarea>
 
