Latest Code Upload

--- a/about-us.html
+++ b/about-us.html
@@ -60,33 +60,15 @@
 
     <div class="container">
         <section class="about-section">
-            <h2>Our Mission</h2>
+            <h2>Our intro</h2>
             <p>
-                Welcome to [Your Company Name]! Our mission is to provide exceptional products and services
-                that meet the needs of our customers. We are dedicated to innovation, quality, and customer satisfaction.
-            </p>
-        </section>
-
-        <section class="about-section">
-            <h2>Our Team</h2>
-            <p>
-                Our team is made up of skilled professionals who are passionate about their work. We believe
-                in teamwork and collaboration to achieve our goals and serve our clients effectively.
-            </p>
-        </section>
-
-        <section class="about-section">
-            <h2>Our History</h2>
-            <p>
-                Founded in [Year], [Your Company Name] has grown from a small startup to a leading company in
-                our industry. Over the years, we have consistently delivered high-quality products and services
-                and built lasting relationships with our clients.
+                Welcome to [encircle]
             </p>
         </section>
     </div>
 
     <footer>
-        <p>&copy; 2024 [Your Company Name]. All rights reserved.</p>
+        <p>&copy; 2024 [Encircle]. All rights reserved.</p>
     </footer>
 </body>
 </html>
