--- a/contact-us.html
+++ b/contact-us.html
@@ -88,7 +88,7 @@
             <h2>Our Contact Information</h2>
             <p>Address: 1234 Main Street, Suite 100, City, State, ZIP</p>
             <p>Phone: (123) 456-7890</p>
-            <p>Email: <a href="mailto:contact@example.com">contact@example.com</a></p>
+            <p>Email: <a href="mailto:admin@admin.com">admin@admin.com</a></p>
         </section>
 
         <section class="contact-form">
